Week 1 task complete

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="style/index.css">
     <title>Star Wars</title>
   </head>
   <body>
+    <!-- <h1 class="headText">Star Wars</h1> -->
+    <div class="image-div">
+      <img src="img/star_wars_logo_PNG14.webp" alt="star-wars" class="image-header">
+    </div>
+    
+    <div class="container" id="characters">
+     
+    </div>
+    <div class="details-block" id="details-block"></div>
     <!-- Write your implementation here -->
+    <script src="script/index.js"></script>
   </body>
+  
 </html>
